fixed inconsistent list item spacing

--- a/api/ref.css
+++ b/api/ref.css
@@ -60,8 +60,8 @@ table .api-enum-item-icon {
 }
 
 #api-docs ul li {
-	padding   : 3px 0px;
-	font-size : 12px;
+	padding-top : 6px;
+	font-size   : 12px;
 }
 
 #hierarchy {
